# mnemosyne

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
streamlit-app/: README.md
streamlit-app/src/: config.yaml  credentials.csv  main.py
streamlit-app/src/pages/: 1_Main_Menu.py  2_🧪_Practice.py  3_❌_Mistakes.py  4_Learn.py  4_📚_Learn.py
streamlit-app/src/sections/: components.py  mistakes.py  practice.py  practice_session.py  practice_utils.py  reset_progress.py  review_mistakes.py  upload_exercise.py
streamlit-app/src/standard_exercises/: DutchEnglishFrequencySimplified.txt  DutchEnglishFrequencySimplified1000.txt  DutchEnglishFrequencySimplified2000.txt  DutchEnglishFrequencySimplified3000.txt  DutchEnglishFrequencySimplified4000.txt  DutchEnglishFrequencySimplified5000.txt  SpanishEnglishFrequencySimplified.txt  SpanishEnglishFrequencySimplified1000.txt  SpanishEnglishFrequencySimplified2000.txt  SpanishEnglishFrequencySimplified3000.txt  SpanishEnglishFrequencySimplified4000.txt  SpanishEnglishFrequencySimplified5000.txt  TurkishEnglishDuolingo.txt  TurkishEnglishFrequencySimplified.txt  TurkishEnglishFrequencySimplified1000.txt  TurkishEnglishFrequencySimplified2000.txt  TurkishEnglishFrequencySimplified3000.txt  TurkishEnglishFrequencySimplified4000.txt  TurkishEnglishFrequencySimplified5000.txt  standard_exercise_definition.py
streamlit-app/src/utils/: __init__.py  chatgpt_api.py  chatgpt_schema.py  file_paths.py  google_drive.py  helpers.py  reverso_context.py  story_translation.py  translation.py
(+2 files in other folders)
