[tool.poetry]
name = "vocab-builder"
version = "0.1.0"
description = ""
authors = ["Robin <robin@vespertool.com>"]
license = "mit"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"
gtts = "^2.5.3"
bcrypt = "^4.2.0"
streamlit-cookies-controller = "^0.0.4"
streamlit-authenticator = "^0.4.1"
streamlit-cookies-manager = "^0.2.0"
openai = "^1.55.1"
transformers = "^4.46.3"
google-api-python-client = "^2.154.0"
python-dotenv = "^1.0.1"
reverso-api = "^0.0.1b3"
httpx = "0.27.2"

